styles/globals.scss
@import '/styles/variables.scss';

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: 'Ubuntu', sans-serif;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-thumb {
  height: 4px;
  background: $primary;
  border-radius: 10px;
}

::-webkit-scrollbar-track {
  border: 1px solid $primary;
  border-radius: 10px;
}

